@@ -7,7 +7,9 @@ import static org.mockito.Mockito.*;
 
 import java.io.IOException;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
 import org.apache.pdfbox.cos.COSDictionary;
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -25,12 +27,14 @@ import org.springframework.web.multipart.MultipartFile;
 
 import stirling.software.SPDF.model.api.misc.MetadataRequest;
 import stirling.software.common.service.CustomPDFDocumentFactory;
+import stirling.software.common.service.PdfMetadataService;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 class MetadataControllerTest {
 
     @Mock private CustomPDFDocumentFactory pdfDocumentFactory;
+    @Mock private PdfMetadataService pdfMetadataService;
     @InjectMocks private MetadataController metadataController;
 
     private PDDocument mockDocument;
@@ -73,7 +77,7 @@ class MetadataControllerTest {
     void testMetadata_deleteAllClearsAllMetadata() throws Exception {
         when(pdfDocumentFactory.load(any(MultipartFile.class), eq(true))).thenReturn(mockDocument);
         when(mockDocument.getDocumentInformation()).thenReturn(mockInfo);
-        when(mockInfo.getMetadataKeys()).thenReturn(java.util.Collections.emptySet());
+        when(mockInfo.getMetadataKeys()).thenReturn(Set.of());
         when(mockDocument.getDocumentCatalog()).thenReturn(mockCatalog);
         COSDictionary cosDict = mock(COSDictionary.class);
         when(mockCatalog.getCOSObject()).thenReturn(cosDict);
@@ -84,13 +88,13 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // WebResponseUtils.pdfDocToWebResponse may fail in test context
-            // but we verify the delete-all logic executed
+        } catch (Exception _) {
+            // WebResponseUtils.pdfDocToWebResponse fails without a servlet response;
+            // the verifies below cover the delete-all logic.
         }
 
         verify(mockInfo).getMetadataKeys();
-        verify(cosDict, times(2)).removeItem(any());
+        verify(cosDict, times(1)).removeItem(any());
     }
 
     @Test
@@ -113,8 +117,9 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected - pdfDocToWebResponse may fail
+        } catch (Exception _) {
+            // WebResponseUtils.pdfDocToWebResponse fails without a servlet response;
+            // the verifies below cover the field-setting logic.
         }
 
         verify(mockInfo).setAuthor("TestAuthor");
@@ -124,6 +129,31 @@ class MetadataControllerTest {
         verify(mockInfo).setCreator("TestCreator");
         verify(mockInfo).setProducer("TestProducer");
         verify(mockInfo).setTrapped("True");
+    }
+
+    @Test
+    void testMetadata_nonStandardExistingTrappedIsDroppedInsteadOfReapplied() throws Exception {
+        when(pdfDocumentFactory.load(any(MultipartFile.class), eq(true))).thenReturn(mockDocument);
+        when(mockDocument.getDocumentInformation()).thenReturn(mockInfo);
+        when(mockDocument.getDocumentCatalog()).thenReturn(mockCatalog);
+        // A file carrying a non-standard /Trapped name: re-applying it would
+        // make PDFBox throw inside setTrapped.
+        when(mockInfo.getTrapped()).thenReturn("Yes");
+
+        MetadataRequest request = new MetadataRequest();
+        request.setFileInput(mockFile);
+        request.setDeleteAll(false);
+        request.setTrapped("not-a-trapped-value");
+        request.setAllRequestParams(new HashMap<>());
+
+        try {
+            metadataController.metadata(request);
+        } catch (Exception _) {
+            // WebResponseUtils.pdfDocToWebResponse fails without a servlet response;
+            // the verify below covers the field-setting logic.
+        }
+
+        verify(mockInfo).setTrapped(null);
     }
 
     @Test
@@ -141,8 +171,7 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
         verify(mockInfo).setAuthor(null);
@@ -166,11 +195,53 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
         verify(mockInfo).setCustomMetadataValue("myKey", "myValue");
+    }
+
+    @Test
+    void testMetadata_caseVariantCustomKeyReplacesExisting() throws Exception {
+        when(pdfDocumentFactory.load(any(MultipartFile.class), eq(true))).thenReturn(mockDocument);
+        when(mockDocument.getDocumentInformation()).thenReturn(mockInfo);
+        when(mockDocument.getDocumentCatalog()).thenReturn(mockCatalog);
+        when(mockInfo.getMetadataKeys()).thenReturn(new HashSet<>(Set.of("MyKey")));
+
+        Map<String, String> params = new HashMap<>();
+        params.put("customKey1", "mykey");
+        params.put("customValue1", "newValue");
+
+        MetadataRequest request = new MetadataRequest();
+        request.setFileInput(mockFile);
+        request.setDeleteAll(false);
+        request.setAllRequestParams(params);
+
+        try {
+            metadataController.metadata(request);
+        } catch (Exception _) {
+        }
+
+        // PDF names are case-sensitive: the old casing must not survive.
+        verify(mockInfo).setCustomMetadataValue("MyKey", null);
+        verify(mockInfo).setCustomMetadataValue("mykey", "newValue");
+    }
+
+    @Test
+    void testMetadata_reservedInfoKeyIsRejected() throws Exception {
+        when(pdfDocumentFactory.load(any(MultipartFile.class), eq(true))).thenReturn(mockDocument);
+
+        Map<String, String> params = new HashMap<>();
+        params.put("customKey1", "title");
+        params.put("customValue1", "ShadowTitle");
+
+        MetadataRequest request = new MetadataRequest();
+        request.setFileInput(mockFile);
+        request.setDeleteAll(false);
+        request.setAllRequestParams(params);
+
+        assertThrows(IllegalArgumentException.class, () -> metadataController.metadata(request));
+        verify(mockInfo, never()).setCustomMetadataValue(anyString(), any());
     }
 
     @Test
@@ -186,11 +257,9 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
-        // Should not throw NPE - null params handled gracefully
         verify(mockDocument).setDocumentInformation(mockInfo);
     }
 
@@ -210,8 +279,7 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
         verify(mockInfo).setCustomMetadataValue("MyCustomField", "MyCustomValue");
@@ -248,11 +316,9 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
-        // Standard keys in allRequestParams should not be set via setCustomMetadataValue
         verify(mockInfo, never()).setCustomMetadataValue(eq("Author"), any());
         verify(mockInfo, never()).setCustomMetadataValue(eq("Title"), any());
         verify(mockInfo, never()).setCustomMetadataValue(eq("Subject"), any());
@@ -266,17 +332,15 @@ class MetadataControllerTest {
 
         MetadataRequest request = new MetadataRequest();
         request.setFileInput(mockFile);
-        request.setDeleteAll(null); // null should be treated as false
+        request.setDeleteAll(null);
         request.setAllRequestParams(new HashMap<>());
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
-        // Should not call getMetadataKeys (that's only done when deleteAll=true)
-        verify(mockInfo, never()).getMetadataKeys();
+        verify(mockCatalog, never()).getCOSObject();
     }
 
     @Test
@@ -293,8 +357,7 @@ class MetadataControllerTest {
 
         try {
             metadataController.metadata(request);
-        } catch (Exception e) {
-            // Expected
+        } catch (Exception _) {
         }
 
         verify(mockInfo).setCreationDate(any());
